Revision history for File::DataClass

         - Fixed bug in ResultSource now has copy of schema storage
         - Fixed string quoting in po files
         - Gettext mo files now create a hash table entry for msgid_plural
         - Added Gettext for mo files (read-only)
         - Fixed the way ResultSource::WithLanguage patches in storage object
         - Added Gettext for po files
         - Eliminated Exception_Class class attribute
         - Exception_class now an obj attribute defaulting to class attribute

0.6.286  2011-07-11
         - Changed F::DC API. Made ioc_obj an attribute not a parameter
         - More breakage in IO::tempfile. Set mode to w+ and fix open_args
         - Fixed breakage in IO::stat. Which means val doesn't roundtrip
         - Added aliases_map to MailAlias. Caching hash ref of alias list
         - Improved is_file and is_dir logic
         - Stop sending perms to IO::File->new. Just use umask
         - Fixed type error in chmod. Added more tests
         - Added chown
         - Stat->{mode} is now & 07777 so that the perms val roundtrips
         - Added chmod and copy methods

0.5.271  2011-05-30
         - Fixed base path bug in IO::absolute
         - Can now pass dtd into Storage::XML
         - Improved directory creation permission handling. Ignores umask
         - Use File::Path::make_path not mkpath

0.4.268  2011-05-15
         - Added substitute method to IO
         - Fixed logic error in IO filter processing
         - Added more exception handling tests
         - Fixed casing on Exception_Class class attribute
         - Chomped mail_domain attribute in MailAliases

0.3.259  2011-04-12
         - Suppressed dcollins CPAN testing
         - Added force_array to storage attributes so that arrays can
           be specified through the constructor call
         - Set lock_class to 'none' to prevent the creation of a lock object
         - Added cache_class schema attribute. Set to 'none' to defeat cache