@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Combinator rewritten to use F::Gettext
+         - Updated inc::Bob
          - Fixed bug in ResultSource now has copy of schema storage
          - Fixed string quoting in po files
          - Gettext mo files now create a hash table entry for msgid_plural
